# taxi_prediction_fullstack_lilit

./: README.md  pyproject.toml
src/taxipred/backend/: api.py  data_processing.py
src/taxipred/data/: df_predict.csv  df_train.csv
src/taxipred/frontend/: app.py  routes.py
src/taxipred/frontend/pages/: Route_Map.py
src/taxipred/model_development/: df_predict.csv  df_train.csv  eda.ipynb  model_dev.ipynb
src/taxipred/utils/: constants.py
