[project]
name = "taxipred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lilit900", email = "ajoyan.lilit@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
]

[project.scripts]
taxipred = "taxipred:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"
